--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
     "name": "rrze-newsletter",
-    "version": "0.2.0",
-    "description": "",
+    "version": "0.2.1",
+    "description": "Plugin for creating and sending HTML Newsletters.",
+    "main": "rrze-newsletter.php",
     "scripts": {
         "checkformat": "prettier --check \"**/*.{js,json,css,scss}\"",
         "format": "prettier --write \"**/*.{js,json,css,scss}\"",
         "lint": "eslint src",
-        "start": "npm run clean & webpack --mode=development --watch",
-        "build": "npm run clean & webpack --mode=production",
+        "start": "webpack --mode=development --watch",
+        "build": "webpack --mode=production",
+        "major": "gulp major",
+        "minor": "gulp minor",
+        "patch": "gulp patch",
+        "prerelease": "gulp prerelease",
         "clean": "rm -rf dist/"
     },
     "repository": {
@@ -59,6 +64,9 @@
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-react": "^7.22.0",
         "eslint-webpack-plugin": "^2.1.2",
+        "gulp": "^4.0.2",
+        "gulp-bump": "^3.2.0",
+        "gulp-touch-cmd": "^0.0.1",
         "lodash": "^4.17.21",
         "mini-css-extract-plugin": "^1.5.0",
         "node-sass": "^5.0.0",
@@ -67,6 +75,7 @@
         "postcss-loader": "^5.2.0",
         "prettier": "^2.2.1",
         "sass-loader": "^11.0.1",
+        "semver": "^7.3.5",
         "style-loader": "^2.0.0",
         "terser-webpack-plugin": "^5.1.1",
         "webpack": "^5.26.3",
