--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-nbproject/project.properties
-/nbproject/private/
-nbproject/project.xml
-*.DS_Store
-node_modules
-/package-lock.json
-.idea
-.tmp
-.cache
+### vscode ###
+.vscode/
+### NetBeans ###
+**/nbproject/
+### PhpStorm ###
+.idea/
+### macOS ###
+.DS_Store
+### Node ###
+node_modules/
+package-lock.json
+### WordPress ###
 *.pot
