--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rrze-newsletter",
-    "version": "0.5.5",
+    "version": "0.6.0",
     "description": "Plugin for creating and sending HTML Newsletters.",
     "main": "rrze-newsletter.php",
     "scripts": {
@@ -8,11 +8,12 @@
         "format": "prettier --write \"**/*.{js,json,css,scss}\"",
         "lint": "eslint src",
         "start": "webpack --mode=development --watch",
-        "build": "webpack --mode=production",
+        "build": "npm run lint && webpack --mode=production && gulp bundle",
         "major": "gulp major",
         "minor": "gulp minor",
         "patch": "gulp patch",
         "prerelease": "gulp prerelease",
+        "bundle": "gulp bundle",
         "clean": "rm -rf dist/"
     },
     "repository": {
@@ -66,6 +67,7 @@
         "gulp": "^4.0.2",
         "gulp-bump": "^3.2.0",
         "gulp-touch-cmd": "^0.0.1",
+        "gulp-zip": "^5.1.0",
         "lodash": "^4.17.21",
         "mini-css-extract-plugin": "^1.5.0",
         "node-sass": "^5.0.0",
