--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rrze-newsletter",
-    "version": "0.12.0",
+    "version": "1.0.0-1",
     "description": "Plugin for creating and sending HTML Newsletters.",
     "main": "rrze-newsletter.php",
     "scripts": {
