--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rrze-newsletter",
-    "version": "1.2.2",
+    "version": "1.3.0",
     "description": "Plugin for creating and sending HTML Newsletters.",
     "main": "rrze-newsletter.php",
     "scripts": {
@@ -40,6 +40,7 @@
         "@wordpress/i18n": "^3.19.0",
         "@wordpress/keycodes": "^2.10.0",
         "@wordpress/plugins": "^2.25.0",
+        "@wordpress/server-side-render": "^1.21.3",
         "jquery": "^3.6.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
