--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,14 @@
 {
     "name": "rrze/rrze-newsletter",
     "description": "RRZE WordPress Plugin",
-    "version": "1.7.1",
+    "version": "1.7.2",
     "type": "wordpress-plugin",
     "license": "GPL",
     "require": {
         "php": "^7.4.0",
         "johngrogg/ics-parser": "^2",
-        "rlanvin/php-rrule": "^2"
+        "rlanvin/php-rrule": "^2",
+        "html2text/html2text": "^4.3"
     },
     "suggest": {
         "ext-mbstring": "*",
