--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "bugs": {
         "url": "https://github.com/RRZE-Webteam/rrze-newsletter/issues"
     },
+    "engines": {
+        "node": ">=14.19.3",
+        "npm": ">=6.14.17"
+    },
     "dependencies": {
         "@wordpress/api-fetch": "^6.8.0",
         "@wordpress/blob": "^3.11.0",
