--- a/package.json
+++ b/package.json
@@ -2,77 +2,69 @@
     "name": "rrze-newsletter",
     "main": "webpack.config.js",
     "scripts": {
-        "checkformat": "prettier --check \"**/*.{js,json,css,scss}\"",
-        "format": "prettier --write \"**/*.{js,json,css,scss}\"",
-        "lint": "eslint src",
         "start": "webpack --mode=development --watch",
-        "build": "npm run lint && webpack --mode=production",
+        "build": "webpack --mode=production",
         "clean": "rm -rf dist/"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/RRZE-Webteam/rrze-newsletter.git"
     },
-    "license": "GPL-2.0-or-later",
+    "license": "GPL-3.0-or-later",
     "bugs": {
         "url": "https://github.com/RRZE-Webteam/rrze-newsletter/issues"
     },
+    "homepage": "https://github.com/RRZE-Webteam/rrze-newsletter#readme",
     "engines": {
-        "node": ">=14.19.3",
-        "npm": ">=6.14.17"
+        "node": ">=19.1.0",
+        "npm": ">=8.19.3"
     },
     "dependencies": {
-        "@wordpress/api-fetch": "^6.8.0",
-        "@wordpress/blob": "^3.11.0",
-        "@wordpress/block-editor": "^9.3.0",
-        "@wordpress/blocks": "^11.10.0",
-        "@wordpress/components": "^19.13.0",
-        "@wordpress/compose": "^5.9.0",
-        "@wordpress/data": "^6.11.0",
-        "@wordpress/dom-ready": "^3.11.0",
-        "@wordpress/edit-post": "^6.8.0",
-        "@wordpress/element": "^4.9.0",
-        "@wordpress/hooks": "^3.11.0",
-        "@wordpress/html-entities": "^3.11.0",
-        "@wordpress/i18n": "^4.11.0",
-        "@wordpress/keycodes": "^3.11.0",
-        "@wordpress/plugins": "^4.9.0",
-        "@wordpress/server-side-render": "^3.9.0",
-        "jquery": "^3.6.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "@wordpress/api-fetch": "*",
+        "@wordpress/blob": "*",
+        "@wordpress/block-editor": "*",
+        "@wordpress/blocks": "*",
+        "@wordpress/components": "*",
+        "@wordpress/compose": "*",
+        "@wordpress/data": "*",
+        "@wordpress/dom-ready": "*",
+        "@wordpress/edit-post": "*",
+        "@wordpress/element": "*",
+        "@wordpress/hooks": "*",
+        "@wordpress/html-entities": "*",
+        "@wordpress/i18n": "*",
+        "@wordpress/keycodes": "*",
+        "@wordpress/plugins": "*",
+        "@wordpress/server-side-render": "*",
+        "jquery": "*",
+        "react": "*",
+        "react-dom": "*"
     },
     "devDependencies": {
-        "@babel/core": "^7.14",
-        "@babel/preset-env": "^7.14",
-        "@babel/eslint-parser": "^7.14",
-        "@babel/plugin-proposal-class-properties": "^7.14",
-        "@babel/plugin-syntax-jsx": "^7.14",
-        "@babel/preset-react": "^7.14",
+        "@babel/core": "*",
+        "@babel/preset-env": "*",
+        "@babel/plugin-proposal-class-properties": "*",
+        "@babel/plugin-syntax-jsx": "*",
+        "@babel/preset-react": "*",
         "@shavenzov/po2json": "*",
-        "@wordpress/base-styles": "^4.5.0",
-        "@wordpress/editor": "^12.10.0",
-        "@wordpress/browserslist-config": "^4.1.2",
-        "classnames": "^2.3.1",
-        "eslint": "^7.31.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-react": "^7.24.0",
-        "eslint-webpack-plugin": "^3.0.1",
-        "lodash": "^4.17.21",
-        "prettier": "^2.7.1",
-        "autoprefixer": "^10.4.7",
-        "babel-loader": "^8.2.5",
-        "clean-webpack-plugin": "^4.0.0",
-        "css-loader": "^6.7.1",
-        "css-minimizer-webpack-plugin": "^4.0.0",
-        "mini-css-extract-plugin": "^2.6.1",
-        "postcss-loader": "^7.0.0",
-        "sass": "^1.53.0",
-        "sass-loader": "^13.0.0",
-        "style-loader": "^3.3.1",
-        "terser-webpack-plugin": "^5.3.3",
-        "webpack": "^5.73.0",
-        "webpack-cli": "^4.10.0"
+        "@wordpress/base-styles": "*",
+        "@wordpress/editor": "*",
+        "@wordpress/browserslist-config": "*",
+        "classnames": "*",
+        "lodash": "*",
+        "autoprefixer": "*",
+        "babel-loader": "*",
+        "clean-webpack-plugin": "*",
+        "css-loader": "*",
+        "css-minimizer-webpack-plugin": "*",
+        "mini-css-extract-plugin": "*",
+        "postcss-loader": "*",
+        "sass": "*",
+        "sass-loader": "*",
+        "style-loader": "*",
+        "terser-webpack-plugin": "*",
+        "webpack": "*",
+        "webpack-cli": "*"
     },
     "browserslist": [
         "extends @wordpress/browserslist-config"
