--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "name": "rrze/rrze-newsletter",
+    "version": "1.10.6",
+    "description": "Plugin for creating and sending HTML Newsletters.",
+    "type": "wordpress-plugin",
+    "license": "GPL-3.0-or-later",    
     "require": {
         "php": "^8.0",
         "johngrogg/ics-parser": "^2",
